# rosetta

./: README.md  pyproject.toml
hosts/rob-pc/etc/: fstab
hosts/rob-pc/etc/greetd/: config.toml
hosts/rob-pc/etc/udev/rules.d/: 99fast_charge.rules  99monitor_switch.rules  99utility_keys.rules
src/rosetta/: __init__.py  host.py  packageset.py
